[package]
name = "yew-websocket"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust yew websocket service written with love :)"
repository = "https://github.com/security-union/yew-websocket.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
bincode = "1.3.3"
rmp-serde = "1.1.1"

[dependencies]
yew = "0.20.0"
gloo-net = "0.2.4"
gloo-console = "0.2.3"
wasm-bindgen-futures = "0.4.32"
wasm-bindgen = "0.2.82"
futures = "0.3.24"
gloo = { version = "0.2.1", optional = false }
js-sys = { version = "0.3", optional = false }
thiserror = "1.0"
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1.0"


[dependencies.web-sys]
version = "0.3"
optional = false
features = [
  "AbortController",
  "AbortSignal",
  "AnimationEvent",
  "BinaryType",
  "Blob",
  "BlobPropertyBag",
  "console",
  "DedicatedWorkerGlobalScope",
  "Document",
  "DomTokenList",
  "DragEvent",
  "Element",
  "ErrorEvent",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "FocusEvent",
  "Headers",
  "HtmlElement",
  "HtmlButtonElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "InputEvent",
  "KeyboardEvent",
  "Location",
  "MessageEvent",
  "MouseEvent",
  "Node",
  "ObserverCallback",
  "PointerEvent",
  "ProgressEvent",
  "ReferrerPolicy",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Storage",
  "Text",
  "TouchEvent",
  "TransitionEvent",
  "UiEvent",
  "Url",
  "WebSocket",
  "WheelEvent",
  "Window",
  "Worker",
  "WorkerGlobalScope",
  "WorkerOptions",
]
