[package]
name = "yew-websocket"
version = "0.21.0"
edition = "2021"
license = "MIT"
description = "Rust yew websocket service written with love :)"
repository = "https://github.com/security-union/yew-websocket.git"

[dev-dependencies]
bincode = "1"
rmp-serde = "1"

[dependencies]
yew = "0.21.0"
gloo-net = "0.2"
gloo-console = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
futures = "0.3"
gloo = { version = "0.8", optional = false }
js-sys = { version = "0.3", optional = false }
thiserror = "1"
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
optional = false
features = [
  "AbortController",
  "AbortSignal",
  "AnimationEvent",
  "BinaryType",
  "Blob",
  "BlobPropertyBag",
  "console",
  "DedicatedWorkerGlobalScope",
  "Document",
  "DomTokenList",
  "DragEvent",
  "Element",
  "ErrorEvent",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "FocusEvent",
  "Headers",
  "HtmlElement",
  "HtmlButtonElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "InputEvent",
  "KeyboardEvent",
  "Location",
  "MessageEvent",
  "MouseEvent",
  "Node",
  "ObserverCallback",
  "PointerEvent",
  "ProgressEvent",
  "ReferrerPolicy",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Storage",
  "Text",
  "TouchEvent",
  "TransitionEvent",
  "UiEvent",
  "Url",
  "WebSocket",
  "WheelEvent",
  "Window",
  "Worker",
  "WorkerGlobalScope",
  "WorkerOptions",
]
