[package]
name = "yew-websocket"
version = "1.22.0"
edition = "2021"
license = "MIT"
publish = true
description = "Rust yew websocket service written with love :)"
repository = "https://github.com/security-union/yew-websocket.git"
rust-version = "1.84.0"

[dev-dependencies]
bincode = "1"
rmp-serde = "1"

[dependencies]
yew = "0.22.0"
gloo-net = "0.6"
gloo-console = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
futures = "0.3"
gloo = { version = "0.11", optional = false }
js-sys = "0.3"
thiserror = "2"
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.web-sys]
version = "0.3.70"
optional = false
features = [
  "AbortController",
  "AbortSignal",
  "AnimationEvent",
  "BinaryType",
  "Blob",
  "BlobPropertyBag",
  "console",
  "DedicatedWorkerGlobalScope",
  "Document",
  "DomTokenList",
  "DragEvent",
  "Element",
  "ErrorEvent",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "FocusEvent",
  "Headers",
  "HtmlElement",
  "HtmlButtonElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "InputEvent",
  "KeyboardEvent",
  "Location",
  "MessageEvent",
  "MouseEvent",
  "Node",
  "ObserverCallback",
  "PointerEvent",
  "ProgressEvent",
  "ReferrerPolicy",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Storage",
  "Text",
  "TouchEvent",
  "TransitionEvent",
  "UiEvent",
  "Url",
  "WebSocket",
  "WheelEvent",
  "Window",
  "Worker",
  "WorkerGlobalScope",
  "WorkerOptions",
]
